[tool.poetry]
name = "requests-counter"
version = "1.0.0"
description = "A tool to monitor the number of requests from an or multiple api_key."
authors = ["Alfonso Farruggia"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
