[metadata]
# replace with your username:
name = pycounter_api-Alfonso-Farruggia
version = 0.0.1
author = Alfonso Farruggia
author_email = alfonso.farruggia@gmail.com
description = Request counter for api based on redis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Arfius/pycounter-api
project_urls =
    Bug Tracker = https://github.com/Arfius/pycounter-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6